--- a/public/pages/node_forms/compose_form.html
+++ b/public/pages/node_forms/compose_form.html
@@ -2,6 +2,6 @@
   <label>Name</label>
   <input ng-model="flowNode.name">
 </md-input-container>
-<br>
-<h3>Keys</h3>
+
+<!-- <h3>Keys</h3> -->
 <compose data="flowNode.compose" compose-values="flowNode.composeValues" compose-keys="flowNode.composeKeys">
