--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Octoblu - Integration of Everything">
     <meta name="author" content="Octoblu, now part of Citrix">
     <meta name="theme-color" content="#14568f">
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
     <link href="//fonts.googleapis.com/css?family=Open+Sans:700,300,600,400" rel='stylesheet' type='text/css'>
     <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
 
