Added a sign up page. Changed the sign up links in the log in page.

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -9,9 +9,6 @@
         </md-button>
       </div>
 
-      <div class="auth__form-row">
-      </div>
-
       <strong class="auth__form-divider">
         or
       </strong>
@@ -42,7 +39,7 @@
         </md-button>
       </div>
 
-      <p class="auth__form-suffix">Don't have an account? <a href="{{controller.signUpUri}}">Sign up</a></p>
+      <p class="auth__form-suffix">Don't have an account? <a ui-sref="signup">Sign up here!</a></p>
     </div>
 
   </div>
