--- a/public/pages/node-wizard/add-node.html
+++ b/public/pages/node-wizard/add-node.html
@@ -2,8 +2,9 @@
   <br>
   <br>
 
-  <form class="form" layout="row" layout-align="center">
-    <div class="form-group" flex="66">
+  <div class="connected-nodes--filter">
+  <form class="connected-nodes-form">
+    <div class="form-group">
       <div class="input-group">
         <input type="text" class="form-control" ng-model="nodeTypeSearch" autofocus>
         <span class="input-group-addon">
@@ -13,14 +14,38 @@
     </div>
   </form>
 
+    <div class="connected-nodes--filter-type">
+      <md-select ng-model="filterNodeTypes" placeholder="Filter Nodes" class="node-wizard__form-actions">
+        <md-option ng-value="''">None</md-option>
+        <md-option ng-value="'channel'">Channels</md-option>
+        <md-option ng-value="'device'">Devices</md-option>
+        <md-option ng-value="'microblu'">MicroBlu</md-option>
+      </md-select>
+    </div>
+    <div class="connected-nodes--filter-sort">
+      <md-select ng-model="sortNodeMethod" placeholder="Sort Nodes" class="node-wizard__form-actions">
+        <md-option ng-value="'name'">Alphabetical (ascending)</md-option>
+        <md-option ng-value="'-name'">Alphabetical (descending)</md-option>
+      </md-select>
+    </div>
+    <div class="connected-nodes--filter-view">
+      <md-button ng-click="showHelp = !showHelp" aria-label="Toggle Help View">
+        <i ng-show="showHelp" class="fa fa-th-large fa-2x"></i>
+        <i ng-show="!showHelp" class="fa fa-th-list fa-2x"></i>
+      </md-button>
+    </div>
+  </div>
+
+
   <div class="connected-nodes">
-    <div class="connected-node" ng-repeat="node in nodeTypes | filter: {name:nodeTypeSearch} | orderBy: 'name'">
+    <div class="connected-node" ng-class="{'connected-node-expanded': showHelp}" ng-repeat="node in nodeTypes | filter: {category:filterNodeTypes} | filter: {name:nodeTypeSearch}  | orderBy: sortNodeMethod">
       <a ui-sref="material.nodewizard.add({nodeTypeId: node._id})">
         <div title="{{node.name}}" class="connected-node-thumbnail animated-popout">
           <img ng-src="{{node.logo}}" width="100%" height="100%">
         </div>
         <div class="connected-node-name">{{node.name}}</div>
       </a>
+      <p ng-show="showHelp">{{node.helpText}}</p>
     </div>
   </div>
 </div>
