trigger button will only pulse when the flow device is online

--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -67,7 +67,7 @@
   drag-over="onDragOver($event)"
   drag-over-class="drag-over-accept">
 
-  <flow-editor flow="activeFlow" w-mousetrap="{'mod+c':copySelection, 'mod+x': cutSelection, 'mod+v':pasteSelection, 'backspace': deleteSelection, 'del': deleteSelection, 'mod+z':undoEdit, 'mod+y':redoEdit}" ng-mousemove="setMousePosition($event)" ng-mouseout="clearMousePosition()"></flow-editor>
+  <flow-editor ng-class="{'flow-online' : deviceOnline }" flow="activeFlow" w-mousetrap="{'mod+c':copySelection, 'mod+x': cutSelection, 'mod+v':pasteSelection, 'backspace': deleteSelection, 'del': deleteSelection, 'mod+z':undoEdit, 'mod+y':redoEdit}" ng-mousemove="setMousePosition($event)" ng-mouseout="clearMousePosition()"></flow-editor>
 
   <img src="/assets/images/octoblu.png" class="designer__octoblu-logo"/>
 
