made sidebar close button look better

--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -91,8 +91,8 @@
   </div>
   <div class="designer__sidebar-button">
     <button class="sidebar__expand-button sidebar__toolbar-button" ng-class="{'sidebar__expand-button--closed': !sidebarIsExpanded}" ng-click="sidebarIsExpanded = !sidebarIsExpanded">
-      <i ng-show="!sidebarIsExpanded" class="fa fa-chevron-left fa-lg"></i>
-      <i ng-show="sidebarIsExpanded" class="fa fa-chevron-right fa-lg"></i>
+      <i ng-show="!sidebarIsExpanded" class="fa fa-chevron-left"></i>
+      <i ng-show="sidebarIsExpanded" class="fa fa-chevron-right"></i>
     </button>
   </div>
   <div ng-class="{'sidebar--is-expanded': sidebarIsExpanded}" class="sidebar">
