--- a/public/pages/bluprint-list-item.html
+++ b/public/pages/bluprint-list-item.html
@@ -14,26 +14,12 @@
     <p class="description">
       {{bluprint.description || "No description available."}}
     </p>
-
-    <div class="tags">
-      <a href="#" ng-repeat="tag in bluprint.tags" class="tag">{{tag}}</a>
-    </div>
   </div>
 
   <div class="footer">
     <div class="info-group">
-      <!-- <div class="info">
-        <i class="fa fa-lg fa-heart"></i> {{bluprint.likedBy.length || 0}}
-      </div>
-
-      <div class="info">
-        <i class="fa fa-lg fa-user"></i> {{bluprint.sharedBy.length || 0}}
-      </div> -->
-    </div>
-
-    <div class="info-group">
       <div class="info author">
-        <i class="fa fa-lg fa-user"></i> {{bluprint.ownerName}}
+        AUTHOR: {{bluprint.ownerName}}
       </div>
     </div>
   </div>
