selecting nodes needing activation forces sidebar open

--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -89,7 +89,7 @@
       </md-button>
     </div>
   </div>
-  <button class="sidebar__expand-button sidebar__toolbar-button" ng-class="{'sidebar__expand-button--closed': !sidebarIsExpanded}" ng-click="sidebarIsExpanded = !sidebarIsExpanded">
+  <button class="sidebar__expand-button sidebar__toolbar-button" ng-class="{'sidebar__expand-button--closed': !sidebarIsExpanded}" ng-click="toggleSidebarView()">
     <i ng-show="!sidebarIsExpanded" class="fa fa-chevron-left"></i>
     <i ng-show="sidebarIsExpanded" class="fa fa-chevron-right"></i>
   </button>
