--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -9,7 +9,7 @@
       </span>
     </md-toolbar>
 
-    <md-button class="md-fab md-primary" ng-click="closeNav()" aria-label="Close Nav" ng-hide="isNavLockedOpen()">
+    <md-button class="md-fab md-primary navbar-button" ng-click="closeNav()" aria-label="Close Nav" ng-hide="isNavLockedOpen()">
       <i class="fa fa-bars fa-2x"></i>
     </md-button>
 
