--- a/public/pages/flow-node-setup.html
+++ b/public/pages/flow-node-setup.html
@@ -8,11 +8,11 @@
   <main class="sidebar__pane-body">
     <div class="sidebar__flow-node-setup">
       <img height="100" ng-src="{{nodeType.logo}}">
-      <h3 class="text-center">This Node requires setup</h3>
+      <h3 class="text-center sidebar__setup-title">This Node requires setup</h3>
       <p class="text-center">
         Click Setup to start configuring this node
       </p>
-      <md-button ui-sref="material.nodewizard.add({nodeTypeId: nodeType._id})" class="md-raised md-primary">Setup</md-button>
+      <md-button ui-sref="material.nodewizard.add({nodeTypeId: nodeType._id})" class="md-raised md-primary sidebar__setup-button">Setup</md-button>
     </div>
   </main>
 </div>
