--- a/public/pages/omnibox-flow-node.html
+++ b/public/pages/omnibox-flow-node.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-10">
-    <h4>{{match.model.name || match.model.defaults.type}}</h4>
+    <h4 class="omnibox-item-header">{{match.model.name || match.model.defaults.type}}</h4>
     <small>Select in flow</small>
   </div>
 
