--- a/public/pages/omnibox-node-type.html
+++ b/public/pages/omnibox-node-type.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-lg-10">
-    <h4>{{match.model.name || match.model.defaults.type}}</h4>
+    <h4 class="omnibox-item-header">{{match.model.name || match.model.defaults.type}}</h4>
     <small>Activate and configure</small>
   </div>
 
