fixed node wizard

--- a/public/pages/node-wizard/add-channel/oauth.html
+++ b/public/pages/node-wizard/add-channel/oauth.html
@@ -1,4 +1,4 @@
-<h2>Activating this channel will redirect you to authorize with a third party.</h2>
+<p class="node-wizard__copy">Activating this channel will redirect you to authorize with a third party.</p>
 <md-button ng-click="activate()" class="md-raised md-primary node-wizard__button">
   Activate Channel
 </md-button>
