fixed resource page

--- a/public/pages/resources.html
+++ b/public/pages/resources.html
@@ -13,7 +13,7 @@
   <md-list class="resource__list">
     <md-item ng-repeat="resource in resources">
       <md-item-content class="resource">
-        <div class="md-tile-content">
+        <div class="md-tile-content resource__body">
           <h3 class="resource__title">
             <a href="{{resource.link}}">
               {{resource.title}}
