--- a/public/pages/bluprints.html
+++ b/public/pages/bluprints.html
@@ -6,7 +6,7 @@
       </h3>
     </a>
 
-    <md-input-container class="search md-icon-float">
+    <md-input-container class="search">
       <md-icon md-font-icon="fa fa-search"></md-icon>
       <input ng-model="bluprintSearch">
     </md-input-container>
