Added Nodes Page

--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -14,9 +14,9 @@
     </md-button>
 
     <md-content>
-      <a href ng-click="closeNav()" ui-sref="material.nodes" layout="row" layout-align="start center">
+      <a href ng-click="closeNav()" ui-sref="material.nodewizard.addnode" layout="row" layout-align="start center">
         <i class="fa fa-plug fa-lg"></i>
-        <span>Connect</span>
+        <span>Nodes</span>
       </a>
       <a href ng-click="closeNav()" ui-sref="material.design" layout="row" layout-align="start center">
         <i class="fa fa-edit fa-lg"></i>
