--- a/public/angular/directives/flow/flow-editor/flow-editor.html
+++ b/public/angular/directives/flow/flow-editor/flow-editor.html
@@ -1,5 +1,6 @@
 <div class="flow-editor" ui-on-drop="addNode($data, $event.originalEvent.offsetX, $event.originalEvent.offsetY)">
-  <svg class="flow-editor-workspace" xmlns="http://www.w3.org/2000/svg" version="1.1"  pointer-events="all">
+  <span id="hidden-dragon"></span>
+  <svg draggable="true" class="flow-editor-workspace" xmlns="http://www.w3.org/2000/svg" version="1.1"  pointer-events="all">
     <defs>
       <pattern id="small-blue-grid" width="8" height="8" patternUnits="userSpaceOnUse">
         <path d="M 8 0 L 0 0 0 8" fill="none" stroke="#1E4F95" stroke-width="0.25"/>
@@ -16,6 +17,6 @@
         <path d="M 80 0 L 0 0 0 80" fill="none" stroke="#FF0000" stroke-width="0.5"/>
       </pattern>
     </defs>
-    <g class="flow-editor-render-area" fill="rgb(243, 246, 247)"></g>
+    <g class="flow-editor-render-area" fill="rgb(243, 246, 247)"></g>    
   </svg>
 </div>
