Fixedcopy and import buttons, removed outline from search bar

--- a/public/pages/shared-bluprints.html
+++ b/public/pages/shared-bluprints.html
@@ -43,10 +43,10 @@
               {{bluprint.name}}
             </h3>
             <div class="actions">
-              <md-button class="action md-icon-button" clip-click-fallback="controller.dialogBluprintUrl(bluprint.url)" clip-copy="bluprint.url" clip-click="controller.toastBluprintUrl(bluprint.url)" aria-label="Copy Link">
+              <md-button class="action" clip-click-fallback="controller.dialogBluprintUrl(bluprint.url)" clip-copy="bluprint.url" clip-click="controller.toastBluprintUrl(bluprint.url)" aria-label="Copy Link">
                 Copy
               </md-button>
-              <md-button class="action md-icon-button" ng-click="controller.importBluprint(bluprint.uuid)" aria-label="Import">
+              <md-button class="action" ng-click="controller.importBluprint(bluprint.uuid)" aria-label="Import">
                 Import
               </md-button>
             </div>
