Removed outline from navbar menu icon

--- a/public/pages/bluprints.html
+++ b/public/pages/bluprints.html
@@ -1,6 +1,6 @@
 <md-toolbar class="bluprints-toolbar">
   <div class="md-toolbar-tools">
-    <a href class="menu-icon" ng-click="toggleNav()">
+    <a href class="menu-icon flow-top-bar-tool--menu-button" ng-click="toggleNav()">
       <h3 class="page-heading bluprint-header">
         <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i> Bluprints
       </h3>
