--- a/public/pages/shared-bluprints.html
+++ b/public/pages/shared-bluprints.html
@@ -1,7 +1,7 @@
 <md-toolbar>
   <h2 class="md-toolbar-tools page-heading" layout="row" layout-align="space-between">
     <div class="toolbar-header">
-      <a href class="menu-icon" ng-click="toggleNav()">
+      <a href class="menu-icon flow-top-bar-tool--menu-button" ng-click="toggleNav()">
         <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i>
       </a>
       Shared Bluprints
