--- a/public/pages/process.html
+++ b/public/pages/process.html
@@ -54,12 +54,12 @@
             <sparkline-graph line-b="node.messagesReceivedOverTime" graph-width="80"></sparkline-graph>&nbsp;&nbsp;{{node.totalMessagesReceived}}
           </div>
           <div flex="12" layout="row" layout-align="center">{{getUptime(node.online, node.onlineSince) || '----------'}}</div>
-          <div flex="20" layout="row" layout-align="center">{{node.actions}}
-            <md-button ng-click="stopProcess(node)" class="stop-button" ng-class="{ 'btn-stopped': !node.online}" aria-label="Stop Process">
+          <div class="process-row-actions" flex="20" layout="row" layout-align="center">{{node.actions}}
+            <md-button ng-click="stopProcess(node)" class="stop-button process-row-action" ng-class="{ 'btn-stopped': !node.online}" aria-label="Stop Process">
               <i class="fa fa-stop"></i>
             </md-button>
 
-            <md-button ng-click="startProcess(node)" class="start-button" ng-class="{ 'btn-playing': node.online }" aria-label="Start Process">
+            <md-button ng-click="startProcess(node)" class="start-button process-row-action" ng-class="{ 'btn-playing': node.online }" aria-label="Start Process">
               <i class="fa fa-play"></i>
             </md-button>
           </div>
