Fixed profile font sizes

--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -17,7 +17,7 @@
         <div layout="column" flex class="md-whiteframe-z1 profile-card">
           <md-toolbar class="md-primary">
             <div class="md-toolbar-tools">
-              <span class="md-flex">User</span>
+              <h2 class="md-flex">User</h2>
             </div>
           </md-toolbar>
 
@@ -39,7 +39,7 @@
         <div layout="column" flex class="md-whiteframe-z1 profile-card">
           <md-toolbar class="md-primary">
             <div class="md-toolbar-tools">
-              <span class="md-flex">Authorized Sessions</span>
+              <h2 class="md-flex">Authorized Sessions</h2>
             </div>
           </md-toolbar>
           <div class="card-content">
