show node offline status, load configured when page loads

--- a/public/pages/node-wizard/add-node.html
+++ b/public/pages/node-wizard/add-node.html
@@ -17,7 +17,7 @@
 
 
   <div class="connected-nodes interior">
-    <div ng-if="filterNodeTypes != 'configured'" ng-repeat="node in filteredNodeTypes = (nodeCollection | filter: categoryFilter | filter: {name:nodeNameSearch}  | orderBy: 'name')" class="connected-node">
+    <div ng-repeat="node in filteredNodeTypes = (nodeCollection | filter: categoryFilter | filter: {name:nodeNameSearch}  | orderBy: 'name')" class="connected-node">
       <a href="{{nextStepUrl(node)}}">
         <div title="{{node.name}}" class="connected-node-thumbnail animated-popout" ng-class="{faded: (!node.online && node.uuid)}">
           <img ng-src="{{node.logo}}" width="100%" height="100%">
