--- a/public/pages/connector/channels/detail.html
+++ b/public/pages/connector/channels/detail.html
@@ -2,9 +2,9 @@
   <h2 class="md-toolbar-tools page-heading">
     <a href class="menu-icon flow-top-bar-tool--menu-button" ng-click="toggleNav()">
       <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i>
+      Channel
     </a>
 
-    <span>Channel</span>
   </h2>
 </md-toolbar>
 
