--- a/public/pages/node-wizard/add-channel/existing.html
+++ b/public/pages/node-wizard/add-channel/existing.html
@@ -1,9 +1,4 @@
-<div ng-show="existingChannel" class="row">
-  <div class="col-xs-12 col-md-offset-3 col-md-6 text-center">
-    <h2>This Channel has already been activated.</h2>
-    <br>
-    <a href ui-sref="material.channel({id: existingChannel._id})" class="btn btn-lg btn-primary">
-      Manage Channel
-    </a>
-  </div>
-</div>
+<h2 class="node-wizard__copy">This Channel has already been activated.</h2>
+<md-button href ui-sref="material.channel({id: existingChannel._id})" class="md-raised md-primary node-wizard__button">
+  Manage Channel
+</md-button>
