--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -14,42 +14,42 @@
     </md-button>
 
     <md-content>
-      <a href ng-click="closeNav()" ui-sref="material.nodewizard.addnode" layout="row" layout-align="start center">
+      <a class="navbar-item" href ng-click="closeNav()" ui-sref="material.nodewizard.addnode" layout="row" layout-align="start center">
         <i class="fa fa-plug fa-lg"></i>
         <span>Nodes</span>
       </a>
-      <a href ng-click="closeNav()" ui-sref="material.design" layout="row" layout-align="start center">
+      <a class="navbar-item" href ng-click="closeNav()" ui-sref="material.design" layout="row" layout-align="start center">
         <i class="fa fa-edit fa-lg"></i>
         <span>Design</span>
       </a>
-      <a href ng-click="closeNav()" ui-sref="material.process" layout="row" layout-align="start center">
+      <a class="navbar-item" href ng-click="closeNav()" ui-sref="material.process" layout="row" layout-align="start center">
         <i class="fa fa-tasks fa-lg"></i>
         <span>Process</span>
       </a>
-      <a href ng-click="closeNav()" ui-sref="material.analyze" layout="row" layout-align="start center">
+      <a class="navbar-item" href ng-click="closeNav()" ui-sref="material.analyze" layout="row" layout-align="start center">
         <i class="fa fa-bar-chart-o fa-lg"></i>
         <span>Analyze</span>
       </a>
-      <a href ng-click="closeNav()" ui-sref="material.discover" layout="row" layout-align="start center">
+      <a class="navbar-item" href ng-click="closeNav()" ui-sref="material.discover" layout="row" layout-align="start center">
         <i class="fa fa-flask fa-lg"></i>
         <span>Discover</span>
       </a>
-      <a href ng-click="closeNav()" ui-sref="material.bluprints" layout="row" layout-align="start center">
+      <a class="navbar-item" href ng-click="closeNav()" ui-sref="material.bluprints" layout="row" layout-align="start center">
         <i class="fa fa-file-text fa-lg"></i>
         <span>Bluprints</span>
       </a>
-      <a href ng-click="closeNav()" ui-sref="material.resources" layout="row" layout-align="start center">
+      <a class="navbar-item" href ng-click="closeNav()" ui-sref="material.resources" layout="row" layout-align="start center">
         <i class="fa fa-book fa-lg"></i>
         <span>Resources</span>
       </a>
 
       <md-divider></md-divider>
 
-      <a href ng-click="closeNav()" ui-sref="material.profile" layout="row" layout-align="start center">
+      <a class="navbar-item" href ng-click="closeNav()" ui-sref="material.profile" layout="row" layout-align="start center">
         <i class="fa fa-user fa-lg"></i>
         <span>Profile</span>
       </a>
-      <a href ng-click="logout()" layout="row" layout-align="start center">
+      <a class="navbar-item" href ng-click="logout()" layout="row" layout-align="start center">
         <i class="fa fa-sign-out fa-lg"></i>
         <span>Sign out</span>
       </a>
