notify user when rate limited, add support for messageSchemaUrl

--- a/public/pages/device-message-form.html
+++ b/public/pages/device-message-form.html
@@ -1,3 +1,4 @@
 <div>
+  <pre>{{ device | json }}</pre>
   <form ng-if="device.messageSchema" sf-schema="device.messageSchema" sf-form="['*']" sf-model="model"></form>
 </div>
