added truncate class to node names in connect page

--- a/public/pages/node-wizard/add-node.html
+++ b/public/pages/node-wizard/add-node.html
@@ -22,7 +22,7 @@
         <div title="{{node.name}}" class="connected-node-thumbnail animated-popout" ng-class="{faded: (!node.online && node.uuid)}">
           <img ng-src="{{node.logo}}" width="100%" height="100%">
         </div>
-        <div class="connected-node-name">{{node.name}}</div>
+        <div class="connected-node-name truncate">{{node.name}}</div>
       </a>
     </div>
   </div>
